# Arbitrage

./: .gitignore  README.md  research.sh  start.sh
.claude/: settings.local.json
backend/: .gitignore  pyproject.toml
backend/backtest/: cointegration.py  engine.py  fetch_data.py  optimize.py  report.py
backend/config/: exchanges.json  risk.json  symbols.json
backend/data/ticks/: ticks_2026-03-11.csv
backend/src/: main.py
backend/src/alerts/: telegram_alerts.py
backend/src/api/: server.py
backend/src/cache/: redis_cache.py
backend/src/db/: __init__.py  models.py  session.py
backend/src/engine/: __init__.py  arbitrage.py  pair_validator.py  pairs_engine.py  paper_trader.py  real_costs.py  risk_manager.py
backend/src/exchanges/: __init__.py  base.py  binance.py  coinbase.py  kraken.py
backend/src/models/: symbol_map.py  ticker.py
backend/tests/: test_cache.py  test_engine.py  test_models.py  test_paper_trader.py
frontend/: package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: BalanceChart.tsx  LiveTickers.tsx  PairsStatsCards.tsx  PairsTradesTable.tsx  PairsZScoreChart.tsx  SpreadChart.tsx  StatsCards.tsx  TradesTable.tsx
frontend/src/lib/: api.ts  types.ts  usePairsStream.ts  useSpreadStream.ts
