[project]
name = "arbitrage-backend"
version = "0.1.0"
description = "Algorithmic Arbitrage Paper Trading — Backend"
requires-python = ">=3.9"
dependencies = [
    "websockets>=13.0,<15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]
# Phase 2+ dependencies (install when needed)
phase2 = [
    "redis>=5.0",
]
phase3 = [
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
]

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.pytest.ini_options]
asyncio_mode = "auto"
